--- a/index.html
+++ b/index.html
@@ -68,40 +68,202 @@
     <div class="category">
       <div class="category-list">
         <img class="category-img" src="/images/category1.png" />
-        <p>Electronics</p>
-        <p1>8,9k products</p1>
+        <p class="main-text">Electronics</p>
+        <p class="sub-text">8,9k products</p>
       </div>
       <div class="category-list">
         <img class="category-img" src="/images/category2.png" />
-        <p>Fashion</p>
-        <p1>18,2k products</p1>
+        <p class="main-text">Fashion</p>
+        <p class="sub-text">18,2k products</p>
       </div>
       <div class="category-list">
         <img class="category-img" src="/images/category3.png" />
-        <p>Action Figure</p>
-        <p1>4,1k products</p1>
+        <p class="main-text">Action Figure</p>
+        <p class="sub-text">4,1k products</p>
       </div>
       <div class="category-list">
         <img class="category-img" src="/images/category4.png" />
-        <p>Electronics</p>
-        <p1>4,1k products</p1>
+        <p class="main-text">Electronics</p>
+        <p class="sub-text">4,1k products</p>
       </div>
       <div class="category-list">
         <img class="category-img" src="/images/category5.png" />
-        <p>Book</p>
-        <p1>128k products</p1>
+        <p class="main-text">Book</p>
+        <p class="sub-text">128k products</p>
       </div>
       <div class="category-list">
         <img class="category-img" src="/images/category6.png" />
-        <p>Gaming</p>
-        <p1>82k products</p1>
-        
+        <p class="main-text">Gaming</p>
+        <p class="sub-text">82k products</p>
       </div>
-      
     </div>
-<div class="category-end">
-        <p>Popular Product on Lenny </p>
-        <p1> Lorem ipsum dolor sit amet consectetur. Integer cursus cursus in</p1>
+    <div class="category-end">
+      <p class="main-text">Popular Product on Lenny</p>
+      <p class="sub-text">
+        Lorem ipsum dolor sit amet consectetur. Integer cursus cursus in
+      </p>
+    </div>
+    <div class="card-container">
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card1.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Spy x Family Tshirt</p>
+              <p class="price-text">26$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
       </div>
+ <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card2.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Green Man Jacket</p>
+              <p class="price-text">49$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card3.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Iphone 14 Pro Max</p>
+              <p class="price-text">1200$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card4.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Oversized Tshirt</p>
+              <p class="price-text">48$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card5.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Brown Woman Jacket</p>
+              <p class="price-text">49$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card6.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Airpod Pro 2022</p>
+              <p class="price-text">459$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card7.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">DJI Mini 3 Pro</p>
+              <p class="price-text">824$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="card full">
+        <div class="card-top">
+          <img class="card-img" src="/images/card8.png" />
+          <button class="card-favourite">
+            <img class="star-1img" src="/images/heart.png" />
+          </button>
+        </div>
+        <div class="card-bot">
+          <div class="card-text">
+            <div class="main-price">
+              <p class="main-text">Ipad Pro Gen 3</p>
+              <p class="price-text">1200$</p>
+            </div>
+            <p class="sub-text">North Purwokerto</p>
+            <div class="card-star">
+              <img class="top1-1img" src="/images/star.png" />4,8 . 1,233 Sold
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
