--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           </div>
         </div>
       </div>
- <div class="card full">
+      <div class="card full">
         <div class="card-top">
           <img class="card-img" src="/images/card2.png" />
           <button class="card-favourite">
@@ -264,6 +264,57 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="loadmore-container">
+      <button class="loadmore">Load More</button>
+    </div>
+    <div class="mid2-container">
+      <div class="mid2">
+        <img class="mid2-img" src="/images/mid2-img.png" />
+        <p class="main-text">Ipad Air Gen 5</p>
+        <p class="sub-text">
+          Lorem ipsum dolor sit amet consectetur. Integer cursus cursus in
+          sapien quam risus sed diam.
+        </p>
+        <div class="mid2-buyv">
+          <div class="buy-now">Buy Now</div>
+          <div class="detail">View Detail</div>
+        </div>
+      </div>
+    </div>
+    <div class="mid1">
+      <div class="mid1-text">Lenny's Article</div>
+      <button class="mid1-detail">View Detail</button>
+    </div>
+    <div class="mid3-container">
+      <div class="mid3-box">
+        <img class="box-img" src="/images/mid3-1.jpg" />
+        <p class="date">22 Dec 2022</p>
+        <p class="main-text">Make your desk more neat and beautiful</p>
+        <p class="sub-text">
+          Lorem ipsum dolor sit amet consectetur. Arcu pellentesque etiam
+          scelerisque pharetra id. Maecenas diam eu amet cras
+        </p>
+      </div>
+      <div class="mid3-box">
+        <img class="box-img" src="/images/mid3-2.jpg" />
+        <p class="date">22 Dec 2022</p>
+        <p class="main-text"> What are the fashion trend in 2023?</p>
+        <p class="sub-text">
+         Lorem ipsum dolor sit amet consectetur. Arcu pellentesque etiam scelerisque pharetra id. Maecenas diam eu amet cras
+        </p>
+      </div>
+      <div class="mid3-box">
+        <img class="box-img" src="/images/mid3-3.jpg" />
+        <p class="date">22 Dec 2022</p>
+        <p class="main-text">Tips for Work Life Balance</p>
+        <p class="sub-text">
+      Lorem ipsum dolor sit amet consectetur. Arcu pellentesque etiam scelerisque pharetra id. Maecenas diam eu amet cras
+        </p>
+      </div>
+    </div>
+    <div class="last-container">
+      
     </div>
   </body>
 </html>
